# eg4-bridge

./: Cargo.toml  README.md  config.yaml.example  python_eg4_reader.py  repository.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: EG4-18KPV-12LV-Modbus-Protocol.txt  datalog.json  eg1.json  eg2.portal.txt  eg3.portal.txt  eg4_registers.json  parse-value-frame.py  various-values-and-notes.txt
python/: backup_inverter_config.py
src/: channels.rs  command.rs  config.rs  database.rs  datalog_writer.rs  eg4_registers.py  error.rs  home_assistant.rs  influx.rs  lib.rs  main.rs  mqtt.rs  options.rs  prelude.rs  register.rs  register_cache.rs  scheduler.rs
src/coordinator/: mod.rs
src/coordinator/commands/: ac_charge_time.rs  charge_priority_time.rs  mod.rs  parse_hold.rs  parse_input.rs  read_hold.rs  read_inputs.rs  read_param.rs  set_ac_charge_time.rs  set_ac_first_time.rs  set_charge_priority_time.rs  set_forced_discharge_time.rs  set_hold.rs  time_register_ops.rs  timesync.rs  update_hold.rs  validation.rs  write_inverter.rs  write_param.rs
src/eg4/: inverter.rs  packet.rs  packet_decoder.rs
src/lxp/: inverter.rs  packet.rs
tests/: common.rs  test_coordinator.rs  test_coordinator_commands_read_hold.rs  test_coordinator_commands_read_inputs.rs  test_coordinator_commands_update_hold.rs  test_packet_read_inputs.rs
