[package]
name = "eg4-bridge"
version = "0.14.0-dev"
authors = ["Chris Elsworth <chris@cae.me.uk>", "Jared Mauch <jared@puck.nether.net>"]
edition = "2021"
repository = "https://github.com/jaredmauch/eg4-bridge"

[[bin]]
name = "eg4-bridge"
path = "src/main.rs"

[lib]
name = "eg4_bridge"
path = "src/lib.rs"

[features]
mocks = []

[dev-dependencies]
mockito = "1.2.0"

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
clap = { version = "=4.4.18", features = ["derive"] }
crc16 = "0.4.0"
env_logger = { version = "0.10.1", default-features = false, features = [] }
futures = "0.3.30"
log = "0.4.20"
net2 = "0.2.39"
nom = "7.1.3"
nom-derive = "0.10.0"
num_enum = "0.6.1"
rumqttc = "0.23.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.0"
serde_json = "1.0.114"
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["net", "macros", "signal"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
chrono = { version = "0.4.34", features = ["serde"] }
cron-parser = "0.7.0"
enum_dispatch = "0.3.12"
async-trait = "0.1.77"
reqwest = "0.11.24"
rinfluxdb = { version = "~0.1", git = "https://gitlab.com/celsworth/rinfluxdb.git", rev = "f3f5b23e" }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "any", "sqlite", "chrono"] }
url = "2.5.0"
